added blur effect to main view, implemented Haptic to action buttons

--- a/Priority/Info.plist
+++ b/Priority/Info.plist
@@ -29,12 +29,10 @@
 	<true/>
 	<key>UILaunchScreen</key>
 	<dict>
-		<key>UIColorName</key>
-		<string>background-color</string>
 		<key>UIImageName</key>
-		<string>image</string>
+		<string>background</string>
 		<key>UIImageRespectsSafeAreaInsets</key>
-		<true/>
+		<false/>
 	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
